# ubuntu-app-launch

./: .clang-format  CMakeLists.txt  application-click.conf.in  application-failed.c  application-job.c  cgroup-reap-all.c  click-exec.c  desktop-exec.c  desktop-hook.c  exec-line-exec.c  helpers-shared.c  helpers.c  helpers.h  null-tracepoint.c  null-tracepoint.h  oom-adjust-setuid-helper.c  socket-demangler.c  ual-tracepoint.h  untrusted-helper-type-end.c  xdg-autostart-find.c  xdg-autostart-find.conf.in  xdg-autostart-parse.c  xdg-autostart.conf.in  xmir-helper.c  zg-report-app.c
cmake/: UseLttngGenTp.cmake
data/: com.canonical.UbuntuAppLaunch.xml
debian/: changelog  control  libubuntu-app-launch2.symbols  ubuntu-app-launch-tools.install  upstart-app-launch.install  upstart-xdg-autostart.install
libubuntu-app-launch/: CMakeLists.txt  app-info.c  app-info.h  appid.h  application-icon-finder.cpp  application-icon-finder.h  application-impl-base.cpp  application-impl-base.h  application-impl-click.cpp  application-impl-click.h  application-impl-legacy.cpp  application-impl-legacy.h  application-impl-libertine.cpp  application-impl-libertine.h  application-impl-snap.cpp  application-info-desktop.cpp  application-info-desktop.h  application.cpp  application.h  click-exec.c  click-exec.h  desktop-exec.c  desktop-exec.h  glib-thread.cpp  glib-thread.h  helper-impl-click.cpp  helper-impl-click.h  helper.cpp  helper.h  jobs-base.cpp  jobs-base.h  jobs-systemd.cpp  jobs-systemd.h  jobs-upstart.cpp  oom.h  recoverable-problem.c  (+15 more)
tests/fuzz/: CMakeLists.txt  desktop-fuzz.cpp
(+51 files in other folders)
